# CatModel2_ros2_control

./: README.md
CatModel2_v2_description/: CMakeLists.txt  README.md  package.xml
CatModel2_v2_description/config/: robot_control.yaml
CatModel2_v2_description/config/ocs2/: reference.info  task.info
CatModel2_v2_description/launch/: visualize.launch.py
CatModel2_v2_description/meshes/: LF_calf.STL  LF_hip.STL  LH_calf.STL  LH_hip.STL  RF_calf.STL  RF_hip.STL  RH_calf.STL  RH_hip.STL  base_link.STL
CatModel2_v2_description/urdf/: CatModel2_v2.urdf
CatModel2_v2_description/xacro/: CatModel2_v2.xacro  imu.xacro
CatModel2_v2_dummy/: CMakeLists.txt  package.xml
CatModel2_v2_dummy/include/CatModel2_v2_dummy/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  ModeSequenceTemplateRos.h
CatModel2_v2_dummy/include/CatModel2_v2_dummy/visualization/: CatModel2Visualizer.h
CatModel2_v2_dummy/launch/: CatModel2_sqp.launch.py  CatModel2_target.launch.py  basic.launch.py  dummy.launch.py  gait_command.launch.py
CatModel2_v2_dummy/rviz/: CatModel2.rviz
CatModel2_v2_dummy/src/: CatModel2DummyNode.cpp  CatModel2GaitCommandNode.cpp  CatModel2PoseCommandNode.cpp  CatModel2SqpMpcNode.cpp  pinocchio_test.cpp
CatModel2_v2_dummy/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
CatModel2_v2_dummy/src/visualization/: CatModel2Visualizer.cpp
CatModel2_v2_interface/: CMakeLists.txt  package.xml
CatModel2_v2_interface/include/CatModel2_v2_interface/: LeggedInterface.h  LeggedRobotPreComputation.h
CatModel2_v2_interface/include/CatModel2_v2_interface/common/: ModelSettings.h  Types.h  utils.h
CatModel2_v2_interface/include/CatModel2_v2_interface/constraint/: EndEffectorLinearConstraint.h  FrictionConeConstraint.h  NormalVelocityConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
CatModel2_v2_interface/include/CatModel2_v2_interface/cost/: LeggedRobotQuadraticTrackingCost.h
CatModel2_v2_interface/include/CatModel2_v2_interface/dynamics/: LeggedRobotDynamicsAD.h
CatModel2_v2_interface/include/CatModel2_v2_interface/foot_planner/: CubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
CatModel2_v2_interface/include/CatModel2_v2_interface/gait/: Gait.h  GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
CatModel2_v2_interface/include/CatModel2_v2_interface/initialization/: LeggedRobotInitializer.h
CatModel2_v2_interface/include/CatModel2_v2_interface/reference_manager/: SwitchedModelReferenceManager.h
CatModel2_v2_interface/src/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp
CatModel2_v2_interface/src/common/: ModelSettings.cpp
CatModel2_v2_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
CatModel2_v2_interface/src/dynamics/: LeggedRobotDynamicsAD.cpp
CatModel2_v2_interface/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
CatModel2_v2_interface/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
CatModel2_v2_interface/src/initialization/: LeggedRobotInitializer.cpp
CatModel2_v2_interface/src/reference_manager/: SwitchedModelReferenceManager.cpp
hardware_CatModel2_mujoco/: CMakeLists.txt  HardwareCatModel2.xml  README.md  package.xml
hardware_CatModel2_mujoco/include/hardware_CatModel2_mujoco/: HardwareCatModel2.h
hardware_CatModel2_mujoco/src/: HardwareCatModel2.cpp
