<?xml version="1.0"?>
<package format="2">
  <name>CatModel2_v2_dummy</name>
  <version>0.0.1</version>
  <description>The CatModel2_v2_dummy package</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>
  <maintainer email="jeanpierre.sleiman@mavt.ethz.ch">Jean-Pierre Sleiman</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>tf2</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>
  <depend>CatModel2_v2_interface</depend>
  <depend>ocs2_ros_interfaces</depend>


  <export>                               
   <build_type>ament_cmake</build_type>
  </export>
</package>
