<?xml version="1.0"?>
<package format="2">
    <name>CatModel2_v2_interface</name>
    <version>0.0.1</version>
    <description>The CatModel2_v2_interface package</description>

    <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
    <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>
    <maintainer email="jeanpierre.sleiman@mavt.ethz.ch">Jean-Pierre Sleiman</maintainer>

    <license>BSD-3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>ocs2_ddp</depend>
    <depend>ocs2_mpc</depend>
    <depend>ocs2_sqp</depend>
    <depend>ocs2_ipm</depend>
    <depend>ocs2_centroidal_model</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
